--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="keywords" content="Culto del Cordero" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Culto del Cordero - Inicio</title>
-    <link rel="icon" href="./assets/img/ico/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +17,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
+    <link rel="icon" href="./assets/img/ico/favicon.ico" />
   </head>
   <body>
     <div id="top"></div>
@@ -134,14 +135,14 @@
                       </p>
                       <p>
                         Si afirmamos que no tenemos pecado, solo estamos
-                        engañando nosotros mismos, y no vivir en la verdad. Pero
-                        si confesar nuestros pecados a él, él es fiel y justo
-                        para perdonarnos nuestros pecados y limpiarnos de todo
-                        maldad.
+                        engañándonos a nosotros mismos, y no vivir en la verdad.
+                        Pero si confesar nuestros pecados a él, él es fiel y
+                        justo para perdonarnos nuestros pecados y limpiarnos de
+                        toda maldad.
                       </p>
                     </div>
                     <hr />
-                    <blockquote class="blockquote mb-0">
+                    <blockquote class="fst-italic mb-0">
                       <p>
                         Acércate. No temas, porque aunque estés
                         <strong>vivo por ahora</strong>, aún te necesito.
@@ -157,9 +158,74 @@
                       rel="noopener noreferrer"
                       aria-label="Visita la demo del Culto del Cordero para saber más."
                     >
-                      Visita la demo del Culto del Cordero para saber más (se
-                      abrirá en una nueva pestaña).
+                      Visita la demo del Culto del Cordero para saber más.
+                      <iconify-icon
+                        icon="material-symbols-light:open-in-new-rounded"
+                        width="1.5rem"
+                        height="1.5rem"
+                        alt="Abrir en nueva pestaña."
+                      ></iconify-icon>
                     </a>
+                    <br />
+                    <a
+                      href="https://x.com/cultofthelamb"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Sigue al Culto del Cordero en X."
+                    >
+                      Sigue al Culto del Cordero en X.
+                      <iconify-icon
+                        icon="material-symbols-light:open-in-new-rounded"
+                        width="1.5rem"
+                        height="1.5rem"
+                        alt="Abrir en nueva pestaña."
+                      ></iconify-icon>
+                    </a>
+                    <hr />
+                    <h3 class="text-uppercase">
+                      Un vistazo a la historia del Culto del Cordero
+                    </h3>
+                    <video
+                      id="cultOfTheLambTrailer"
+                      class="video-js w-100"
+                      controls
+                      height="500"
+                      preload="auto"
+                      poster="./assets/img/png/poster-cult-video.png"
+                      data-setup="{}"
+                      aria-label="Video de la historia del Culto del Cordero."
+                    >
+                      <source
+                        src="./assets/videos/trailer.mp4"
+                        type="video/mp4"
+                      />
+                      <track
+                        kind="captions"
+                        src="./assets/videos/tracks/trailer-subtitles.es.vtt"
+                        srclang="es"
+                        label="Español"
+                        default
+                      />
+                      <p class="vjs-no-js">
+                        Para ver el vídeo, por favor, habilita JavaScript y
+                        considera actualizar tu navegador.
+                        <a
+                          href="https://videojs.com/html5-video-support/"
+                          target="_blank"
+                          >Soporta vídeos HTML5</a
+                        >
+                      </p>
+                    </video>
+                    <audio
+                      id="audioDescriptionES"
+                      preload="auto"
+                      aria-hidden="true"
+                    >
+                      <source
+                        src="./assets/audios/tracks/trailer-descriptions.es.wav"
+                        type="audio/wav"
+                      />
+                    </audio>
                   </div>
                 </div>
               </div>
@@ -185,12 +251,6 @@
             <p>
               No se mientan unos a otros, porque se han despojado de su antigua
               naturaleza pecaminosa y de todas sus malas acciones.
-            </p>
-            <p>
-              Vístanse con su nueva naturaleza y sean renovados a medida que
-              aprenden a conocer a su
-              <strong>Creador, Aquel que Espera</strong>, y se vuelven como él
-              en esta nueva vida.
             </p>
           </div>
           <div class="col-md-4 d-flex align-items-center">
@@ -234,7 +294,7 @@
                     Su navegador no soporta vídeo HTML5.
                   </video>
                   <p>
-                    <strong>El Cordero</strong> es el único que puede salvarnos.
+                    <strong>El Cordero</strong> es el único que puede letnos.
                   </p>
                 </div>
               </div>
@@ -548,5 +608,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
+    <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+    <script src="./assets/js/video-js.js"></script>
   </body>
 </html>
